--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "framer-motion": "^7.6.5",
     "next": "^13.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "eslint": "^8.27.0",
