--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "three": "^0.146.0"
   },
   "devDependencies": {
     "eslint": "^8.27.0",
